# finance-manager-app-using-rust

./: CONTRIBUTING.md  LICENSE  README.md
my_finance_app/: Cargo.toml  Finance_app.db  build.rs  resources.gresource
my_finance_app/src/: main.rs  transactionwindow.rs  viewtransactions.rs
my_finance_app/src/finance/: expenses.rs  incomes.rs  mod.rs  transaction.rs
my_finance_app/src/resources/: resources.gresource  resources.gresource.xml  transactionwindow.ui  viewtransactions.ui  window.ui
