[package]
name = "my_finance_app"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = { version = "0.9.5", package = "gtk4" }
glib = "0.20.7"
rusqlite = "0.33.0"
chrono = "0.4"
once_cell = "1.18"




[build-dependencies]
glib-build-tools = "0.20.0"
libadwaita = { version = "0.7.1", package = "libadwaita" }

